# hexlauncher

./: .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  Main.qml  README.md  devlogs  main.cpp
.cache/clangd/index/: gamepreset.cpp.249118B498F5BCB6.idx  gamepreset.h.1BBBF598A77073C1.idx  gamepresetmodel.cpp.04B08C4D00720A37.idx  gamepresetmodel.h.386851730900F600.idx  globalmodels.cpp.4860A3DD99B41DB6.idx  globalmodels.h.794505A62F9B4822.idx  main.cpp.10D8ECC9B731726C.idx  main.cpp.D4441B5AE7197758.idx  miniz.c.7825441516F9E409.idx  miniz.h.8D8AFE6DD16298F4.idx  optionitem.cpp.2A703775ADB39329.idx  optionitem.h.C0B6507663F43174.idx  optionmodel.cpp.6ECE9150B4CF0C5B.idx  optionmodel.h.B5A657E44DEC43F6.idx  presetparser.cpp.103018D7526BC94B.idx  presetparser.h.5900C12BBDBB8EA8.idx  qmicroz.cpp.FFF570F86909E898.idx  qmicroz.h.D9C1AF827AB4BE2B.idx  tools.cpp.E188B3DF48A2AF4C.idx  tools.h.C90A689D71F47745.idx  updater.cpp.D2EC4CFACA8431F4.idx  updater.h.F9AEE81D6DECFD01.idx
components/: AddPresetPopUp.qml
src/: gamepreset.cpp  gamepreset.h  gamepresetmodel.cpp  gamepresetmodel.h  gamesmodel.cpp  gamesmodel.h  globalmodels.cpp  globalmodels.h  main.cpp  optionitem.cpp  optionitem.h  presetparser.cpp  presetparser.h
src/RRUpdater/: updater.cpp  updater.h
src/models/: gamepresetmodel.cpp  gamepresetmodel.h  gamesmodel.cpp  gamesmodel.h  globalmodels.cpp  globalmodels.h  optionmodel.cpp  optionmodel.h
src/utils/: common.h  unzipper.h
ui/: Main.qml
ui/components/: CButton.qml  CCombobox.qml  CustomDropDown.qml  DownloadProgress.qml  Sidebar.qml
ui/views/: Games.qml  Presets.qml  Settings.qml
